--- a/index.html
+++ b/index.html
@@ -63,38 +63,7 @@
 
 <body>
 <button type="button" name="button" onclick="sendData();">Send</button>
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-<script>
-  var xhttp = new XMLHttpRequest();
-  var userJson =
-  {"data":
-  {
-      "id_user": null,
-      "datos_personales": {
-        "nombre": null,
-        "apellido": null,
-        "movil": {
-          "movil_num": null
-        },
-      },
-      "datos_laborales": {
-        "experiencia": [
-          {
-            "trabajo_cia": null,
-            "trabajo_periodo": {
-              "trabajo_periodo_fin": null
-            },
-            "trabajo_puesto": null,
-            "trabajo_func": null
-          }
-        ]
-      },
-      "educacion_y_habilidades": {        "chingon" : nul
-}
-
--->
+</body-->
 <!DOCTYPE html>
 <html>
 
