--- a/despachador/searchResults3.html
+++ b/despachador/searchResults3.html
@@ -50,9 +50,9 @@
   <div class="container">
     <div class="card-panel">
       <div class="row center">
-        <div class="col s12 m6 offset-m3 orange rounded" id="classification">
+        <div class="col s12 m6 offset-m3 blue rounded" id="classification">
           <p class="flow-text white-text center">
-            Alto Valor
+            Libros
           </p>
         </div>
       </div>
