--- a/despachador/error.html
+++ b/despachador/error.html
@@ -50,10 +50,10 @@
   <div class="container">
     <div class="card-panel">
       <div class="row center">
-        <div class="col s12 m6 offset-m3 orange rounded" id="classification">
-          <p class="flow-text white-text center">
-            Alto Valor
-          </p>
+        <div class="col s12 m6 offset-m3 red rounded" id="classification">
+          <h1 class="white-text center">
+            Error en número de rastreo
+          </h1>
         </div>
       </div>
     </div>
