--- a/despachador/searchResults3.html
+++ b/despachador/searchResults3.html
@@ -56,6 +56,45 @@
           </p>
         </div>
       </div>
+      <div class="row center">
+        <div class="col s12" style="margin-bottom:20px;"></div>
+        <div class="col s6 center">
+          <h4 class="indigo-text text-darken-4">AWB:</h4>
+          <p class="indigo-text text-darken-4 flow-text">1234567890</p>
+        </div>
+        <div class="col s6 center">
+          <h4 class="indigo-text text-darken-4">Exentos (0-50)</h4>
+          <p class="indigo-text text-darken-4 flow-text">Valor declarado: 40 USD</p>
+        </div>
+      </div>
+      <table>
+        <tbody>
+          <tr>
+            <td><i class="material-icons">fitness_center</i></td>
+            <td>Peso:</td>
+            <td class="indigo-text text-darken-4">0.9 kg</td>
+          </tr>
+          <tr>
+            <td><i class="material-icons">receipt</i></td>
+            <td>Descripción:</td>
+            <td class="indigo-text text-darken-4">The original description of the package goes here</td>
+          </tr>
+          <tr>
+            <td><i class="material-icons">explicit</i></td>
+            <td>Descripción en español:</td>
+            <td class="indigo-text text-darken-4 flow-text">En este lugar va la traducción al español de la descripción</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="col s12" style="margin-bottom:20px;"></div>
+      <div class="row">
+        <div class="col s6 center">
+          <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>Info. correcta</a>
+        </div>
+        <div class="col s6 center">
+          <a class="waves-effect waves-light btn-large red darken-4" href="https://mmoolloo.github.io/editData/"><i class="material-icons left">clear</i>Info. incorrecta</a>
+        </div>
+      </div>
     </div>
   </div>
 
