--- a/despachador/searchResults2.html
+++ b/despachador/searchResults2.html
@@ -92,7 +92,7 @@
           <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>Info. correcta</a>
         </div>
         <div class="col s6 center">
-          <a class="waves-effect waves-light btn-large red darken-4" href="https://mmoolloo.github.io/editData/"><i class="material-icons left">clear</i>Info. incorrecta</a>
+          <a class="waves-effect waves-light btn-large red darken-4" href="https://mmoolloo.github.io/despachador/editData/"><i class="material-icons left">clear</i>Info. incorrecta</a>
         </div>
       </div>
     </div>
