Fixed links, moved btns
Moved buttons to the right

--- a/despachador/searchResults1.html
+++ b/despachador/searchResults1.html
@@ -47,7 +47,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="">
     <div class="card-panel">
       <div class="row center">
         <div class="col s12 m6 offset-m3 orange rounded" id="classification">
@@ -58,13 +58,22 @@
       </div>
       <div class="row center">
         <div class="col s12" style="margin-bottom:20px;"></div>
-        <div class="col s6 center">
-          <h4 class="indigo-text text-darken-4">AWB:</h4>
-          <p class="indigo-text text-darken-4 flow-text">1234567890</p>
-        </div>
-        <div class="col s6 center">
-          <h4 class="indigo-text text-darken-4">Exentos (0-50)</h4>
-          <p class="indigo-text text-darken-4 flow-text">Valor declarado: 40 USD</p>
+        <div class="row">
+          <div class="col s9">
+            <div class="col s6 center">
+              <h4 class="indigo-text text-darken-4">AWB:</h4>
+              <p class="indigo-text text-darken-4 flow-text">1234567890</p>
+            </div>
+            <div class="col s6 center">
+              <h4 class="indigo-text text-darken-4">Exentos (0-50)</h4>
+              <p class="indigo-text text-darken-4 flow-text">Valor declarado: 40 USD</p>
+            </div>
+          </div>
+          <div class="col s3 center">
+            <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>Info. correcta</a>
+            <div style="height:60px"></div>
+            <a class="waves-effect waves-light btn-large red darken-4" href="https://mmoolloo.github.io/despachador/editData.html"><i class="material-icons left">clear</i>Info. incorrecta</a>
+          </div>
         </div>
       </div>
       <table>
@@ -87,14 +96,6 @@
         </tbody>
       </table>
       <div class="col s12" style="margin-bottom:20px;"></div>
-      <div class="row">
-        <div class="col s6 center">
-          <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>Info. correcta</a>
-        </div>
-        <div class="col s6 center">
-          <a class="waves-effect waves-light btn-large red darken-4" href="https://mmoolloo.github.io/despachador/editData/"><i class="material-icons left">clear</i>Info. incorrecta</a>
-        </div>
-      </div>
     </div>
   </div>
 
