--- a/despachador/editData.html
+++ b/despachador/editData.html
@@ -127,21 +127,16 @@
         </div>
 
       </div>
-      <div class="row center">
 
-        <div class="col s6">
-
-        </div>
-      </div>
       <div class="row">
-        <div class="col s4 center">
+        <div class="col s4 left-align">
           <a class="waves-effect waves-light btn-large grey" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">arrow_back</i>Atrás</a>
         </div>
-        <div class="col s4 center">
-          <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>¡OK!</a>
-        </div>
-        <div class="col s4 center">
+        <div class="col s5 right-align">
           <a class="waves-effect waves-light btn-large grey" href=""><i class="material-icons left">cancel</i>Borrar datos</a>
+        </div>
+        <div class="col s3 center">
+          <a class="waves-effect waves-light btn-large green darken-4" href="https://mmoolloo.github.io/despachador/"><i class="material-icons left">check</i>¡OK!</a>
         </div>
       </div>
     </div>
